--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,19 @@
-version: '3'
+version: '3.1'
 services:
+  mongodb:
+    image: mongo
+    restart: always
+    ports:
+      - "27017:27017"
+    volumes:
+      - ./data:/data/db
   app:
     build: .
+    restart: always
     ports:
       - "8000:8000"
     volumes:
       - /app/node_modules
       - ./:/app
     depends_on:
-      - mongo
-  mongo:
-    image: mongo
-    ports:
-      - "27017:27017"
+      - mongodb
